# Siemens-System-Level-Modelling-of-ASDLA-Graduation-Project

./: .gitignore  CODEOWNERS  README.md  attributes.txt  mainwindow.py  mainwindow.ui  model.onnx  model.pt  readme.md  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  features.yml
.github/workflows/: deploy.yml  greetings.yml
Pretrained_Output/: main.py
Pretrained_Output/SystemC/: Initiator.h  InitiatorThread.cpp
Pretrained_Output/python/: pretrained.py
data/Pt/: model2.pt
docs/: index.html  package-lock.json  package.json  vite.config.js
docs/src/: App.css  App.jsx  test.py
examples/: readme.md
examples/COCODETECTION_dataset/: COCODETECTION.ipynb  readme.md
examples/Cmake/: CMakeLists.txt  main.cpp
examples/Layers Validation/: Layers Validation.ipynb
examples/Modules/: secondfile.py  superClass.py  third.py
examples/Qt_icon/: paramater_iterator.ipynb  test1.py
examples/SystemC_Ctorch/: .gitignore  CMakeLists.txt  Final_SystemC.cpp  Initiator.cpp  Initiator.h  InitiatorThread.cpp  Target.cpp  Target.h  TestBench.cpp  extension.cpp
examples/TensorBoard/: .gitignore  CNN.py  Layer.py  app.js  index.html  main.py  model.onnx  model.pt  readme.md  requirements.txt  tensorboard_code_explanation.txt  tensorboard_gui.py  train.py  train_jinja_with_tensorboard.jinja
examples/Transfer_Model/: pretrained_Jinja_Tensorboard.jinja  pretrained_model.ipynb  transfer_learning_tutorial.ipynb  transfer_model.py
examples/auto_extraction/: paramater_iterator.ipynb  requirements.txt  test.ui  test1.py
examples/enhancement/: CNN.py  DNN.py  main.py  mainwindow.py  paths.py  resbuild.py  residual.py
examples/filtering_param/: loss_param.md  ls_schedulers.md  optim.md
examples/gui/: mainwindow.py  mainwindow.ui  skin.qss
examples/integrations/: dialogue.py  mainwindow.py  readme.md
examples/jinja/: CNN.py  Layer.py  TemplateRenderer.py  main.py  paramaters.txt  sort.py  test.json  train_template_test.py
examples/pretained_models_test/: GP.ipynb  readme.md  transfer.ipynb
examples/qt_file_picker/: MainWindow.ui  main.py  readme.md
examples/qt_tree_widget/: mainwindow.py  mainwindow.ui
examples/qt_web_view/: mainwindow.py  mainwindow.ui  test1.py
examples/residual_blocks/: CNN.py  DNN.py  ResnetBlockTest.py  main.py  resnet.py  sort.py
old src/: AdvancedParameters_2.csv  CNN.csv  CNN.py  Initiator.cpp  Initiator.h  Layer.py  Target.h  TestBench.cpp  Untitled9.py  aaa.txt  advanced.csv  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.py  train.py  ui_mainwindow.h
old thesis/: Final Graduation Project_2.pptx
public/Cookiecutter/: .gitignore
public/GUI/: mainwindow.ui  resbuild.ui
public/GUI copy/: mainwindow.ui
public/Rules/: warning_rules.txt
public/jinja_templates/: model.py.jinja  pretrained.py.jinja  train.py.jinja
public/json_files/: arch.json  res.json
runs/Jan24_00-14-00_DESKTOP-9CF2A4S/: events.out.tfevents.1706048040.DESKTOP-9CF2A4S.19692.0
runs/Jan24_01-04-28_DESKTOP-9CF2A4S/: events.out.tfevents.1706051068.DESKTOP-9CF2A4S.20108.0
runs/Jan24_01-04-54_DESKTOP-9CF2A4S/: events.out.tfevents.1706051094.DESKTOP-9CF2A4S.12628.0
runs/Jan24_01-16-34_DESKTOP-9CF2A4S/: events.out.tfevents.1706051794.DESKTOP-9CF2A4S.8716.0
runs/Jan24_01-23-29_DESKTOP-9CF2A4S/: events.out.tfevents.1706052209.DESKTOP-9CF2A4S.16976.0
runs/Jan24_01-25-49_DESKTOP-9CF2A4S/: events.out.tfevents.1706052349.DESKTOP-9CF2A4S.8112.0
runs/Jan24_01-27-49_DESKTOP-9CF2A4S/: events.out.tfevents.1706052469.DESKTOP-9CF2A4S.1408.0
runs/Jan24_01-30-24_DESKTOP-9CF2A4S/: events.out.tfevents.1706052624.DESKTOP-9CF2A4S.19060.0
runs/Jan24_01-37-33_DESKTOP-9CF2A4S/: events.out.tfevents.1706053053.DESKTOP-9CF2A4S.14088.0
src/: main.py
src/Classes/: Children.py  Conn.py  Connections.py  Filling.py  (+16 more)
(+118 files in other folders)
